# droid-synth

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  local.properties
app/release/: app-release.aab
app/src/androidTest/java/com/manichord/synthesizer/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/manichord/synthesizer/android/: AndroidGlue.java
app/src/main/java/com/manichord/synthesizer/android/service/: SynthesizerService.java  SynthesizerThread.java
app/src/main/java/com/manichord/synthesizer/android/stats/: JitterStats.java
app/src/main/java/com/manichord/synthesizer/android/ui/: PianoActivity2.java  SettingsActivity.java  SynthActivity.java
app/src/main/java/com/manichord/synthesizer/android/usb/: UsbMidiDevice.java
app/src/main/java/com/manichord/synthesizer/android/widgets/keyboard/: KeySpec.java  KeyboardSpec.java  KeyboardView.java  ScrollStripView.java
app/src/main/java/com/manichord/synthesizer/android/widgets/knob/: KnobListener.java  KnobPlaceholderView.java  KnobPreference.java  KnobView.java
app/src/main/java/com/manichord/synthesizer/core/midi/: MessageFromBytes.java  MessageInputProcessor.java  MessageOutputProcessor.java  MessageTee.java  MidiAdapter.java  MidiChannelFilter.java  MidiEvent.java  MidiFile.java  MidiFilePlayer.java  MidiHeader.java  MidiListener.java  MidiListenerProxy.java  MidiReader.java  MidiTrack.java  MidiUtil.java
app/src/main/res/layout/: amplification.xml  chord_grid.xml  effects.xml  karplus_strong.xml  knobpreflayout_va.xml  knobpreflayout_vs.xml  low_pass_filter.xml  main.xml  oscillator.xml  piano.xml  piano2.xml  score.xml  tremolo.xml  vibrato.xml
app/src/main/res/layout-sw600dp/: piano2.xml
app/src/main/res/menu/: options_menu.xml  synth_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/manichord/synthesizer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
